# s-ui-telegram-bot

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  s-ui-bot.service.example
src/: bot.py  config.py  keyboards.py  sui_api.py
src/handlers/: __init__.py  admin.py  callbacks.py  commands.py
