[project]
name = "s-ui-bot"
version = "1.0.0"
description = "Телеграм бот для управления S-UI панелью VPN"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.15.0",
    "aiohttp>=3.11.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

